[gd_scene load_steps=12 format=3 uid="uid://dcen0c2824kuh"]

[ext_resource type="Script" uid="uid://dr3c8q1wbqbm4" path="res://Scripts/Menu Scripts/game_over_screen.gd" id="1_e5yba"]
[ext_resource type="Texture2D" uid="uid://4l08p5pi7edm" path="res://Assets/Backgrounds/CERVIX SPERM GAME BACKGROUND V3.png" id="1_jb6in"]
[ext_resource type="FontFile" uid="uid://dyavrxg7xjiev" path="res://Assets/Fonts/Daydream DEMO.otf" id="2_y8man"]
[ext_resource type="Texture2D" uid="uid://dkhuptp7tvi6j" path="res://Assets/Menu Buttons/Try Again BUTTON (not hovered).png" id="4_ladg1"]
[ext_resource type="Texture2D" uid="uid://1gplfkt64hqq" path="res://Assets/Menu Buttons/Try Again BUTTON (hovered).png" id="5_e5yba"]
[ext_resource type="Texture2D" uid="uid://ddnf05b2r8n0f" path="res://Assets/Menu Buttons/Revive BUTTON (not hovered).png" id="6_f4vl0"]
[ext_resource type="Texture2D" uid="uid://3ywghno2edhr" path="res://Assets/Menu Buttons/Revive BUTTON (hovered).png" id="7_v5c4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wydum"]
bg_color = Color(0.84313726, 0.27450982, 0.41960785, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_kk8k2"]
font = ExtResource("2_y8man")
font_size = 17
font_color = Color(0.84705883, 0.74509805, 0.16862746, 1)
outline_size = 3
outline_color = Color(0.012617188, 0.012617188, 0.012617188, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jb6in"]
font = ExtResource("2_y8man")
font_size = 9
font_color = Color(0.84705883, 0.74509805, 0.16862746, 1)
outline_size = 2
outline_color = Color(0.011764706, 0.011764706, 0.011764706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8t0r8"]
font = ExtResource("2_y8man")
font_size = 9
font_color = Color(0.84705883, 0.74509805, 0.16862746, 1)
outline_size = 2
outline_color = Color(0.011764706, 0.011764706, 0.011764706, 1)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5yba")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
scale = Vector2(0.52734375, 0.62434894)
texture = ExtResource("1_jb6in")
centered = false
region_rect = Rect2(0, 0, 540, 960)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -285.0
offset_right = -197.0
offset_bottom = -244.99988
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(11, 14)
theme_override_styles/panel = SubResource("StyleBoxFlat_wydum")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.181818
offset_top = 1.3571428
offset_right = 139.81818
offset_bottom = 29.357143
grow_horizontal = 2
scale = Vector2(0.23, 0.2)
text = "Game Over"
label_settings = SubResource("LabelSettings_kk8k2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5681818
anchor_top = -0.23214231
anchor_right = 0.5681818
anchor_bottom = -0.23214231
offset_left = -18.272728
offset_top = 21.857132
offset_right = 120.727264
offset_bottom = 39.857136
grow_horizontal = 2
scale = Vector2(0.23, 0.2)
text = "You can now"
label_settings = SubResource("LabelSettings_jb6in")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67561966
anchor_top = -0.08928539
anchor_right = 0.67561966
anchor_bottom = -0.08928539
offset_left = -18.272728
offset_top = 21.85713
offset_right = 77.72728
offset_bottom = 39.857132
grow_horizontal = 2
scale = Vector2(0.23, 0.2)
text = "Revive"
label_settings = SubResource("LabelSettings_8t0r8")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 8.090909
offset_top = 30.999998
offset_right = 308.0909
offset_bottom = 131.0
scale = Vector2(0.095656455, 0.069057904)
texture_normal = ExtResource("4_ladg1")
texture_pressed = ExtResource("5_e5yba")

[node name="Revive" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 522.0
offset_right = 418.0
offset_bottom = 622.0
scale = Vector2(1.03348, 0.9858612)
texture_normal = ExtResource("6_f4vl0")
texture_pressed = ExtResource("7_v5c4l")

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Revive" to="." method="_on_revive_pressed"]
